# LIA_Lab5

./: CMakeLists.txt  MathOps.cpp  MathOps.h  helloworld.cpp  main.cpp
test/: CMakeLists.txt  test_main.cpp
